--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Leaderboard</title>
+    <!-------------------- Family Font Starts --------------------------->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
+    <!-------------------- Family Font Ends ---------------------------->
+    <!-------------------- Stylesheet Starts --------------------------->
+    <link rel="stylesheet" href="styles/style.css">
+    <!-------------------- Stylesheet Ends ----------------------------->
+
 </head>
 
 <body>
+
+    <header>
+
+
+
+    </header>
+
+
 
 </body>
 
