--- a/index.html
+++ b/index.html
@@ -19,11 +19,76 @@
 
 <body>
 
-    <header>
+    <!------------------ Header Starts----------------->
+    <header> </header>
+    <!------------------ Header Ends----------------->
 
+    <!--------------------- Top Player & Blog Starts -------------------->
+    <main>
+        <!----------------- Top Players Starts ---------------->
+        <section class="container">
+            <div class="top_players">
+                <h1 class="section_title">Top Player</h1>
+                <div class="players">
+                    <div class="player">
+                        <img src="images/players/player-1.png" alt="Player-1">
+                        <h3>John Smith</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-2.png" alt="Player-2">
+                        <h3>Pro Rasel</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-3.png" alt="Player-3">
+                        <h3>Abu Sufian</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-4.png" alt="Player-4">
+                        <h3>Shajedul Karim</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-5.png" alt="Player-5">
+                        <h3>Maruf Ahmed</h3>
+                    </div>
+                    <div class="player">
+                        <img src="images/players/player-6.png" alt="Player-6">
+                        <h3>Mujahid</h3>
+                    </div>
 
+                </div>
 
-    </header>
+            </div>
+            <!----------------- Top Players Ends ------------------->
+            <hr>
+            <!----------------- Top Blog Starts ------------------->
+
+            <div class="top_blogs">
+
+                <h1 class="section_title">Top Blogs</h1>
+
+                <div class="blogs">
+
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="Blog-1">
+                        </div>
+
+                        <div class="blog-info">
+                            <h3 class="blog_title">13 of My Favorite UI/UX Goodies</h3>
+                            <p class="blog_author">By <a href="" target="_blank">Danny Sapio</a></p>
+                        </div>
+                    </article>
+
+                </div>
+
+            </div>
+
+            <!----------------- Top Blog Ends ------------------->
+        </section>
+
+    </main>
+    <!--------------------- Top Player & Top Blog Ends --------------------->
+
 
 
 
